pre_index, login&register page not success

--- a/admin/lib/css/style.css
+++ b/admin/lib/css/style.css
@@ -11,3 +11,12 @@
 #infoLivre{
     width: 40em;
 }
+
+.blue{
+    foncolor: #0000FF !important;
+}
+
+.redbold{
+    color: #FF0000;
+    font-weight: bold;
+}
